# rmh-data-processing

./: .dockerignore  .env  .env_docker  .gitignore  Dockerfile  README.md  compare.py  dicom-to-nifti.sh  docker-example.sh  entrypoint.sh  evaluate.py  pyproject.toml  train-models.py
params/: ADC_extr_params.yaml  DWI_extr_params.yaml  T2W_extr_params.yaml  coreg_params.txt
scripts/: arrange_dicom.py  dicom-to-nifti.sh  get_prediction.py  link-for-segmentation.sh  probability_to_nifti.py  radiomic_utils.py  resample_to_first.py  utils.py
scripts/src/features/: radiomics_extraction.py
scripts/src/features/.ipynb_checkpoints/: mask_preprocessing-checkpoint.py  radiomics_extraction-checkpoint.py
scripts/src/models/.ipynb_checkpoints/: model_analysis-checkpoint.py  preprocess-checkpoint.py
