[project]
name = "rmh-data-processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "acvl-utils<0.2.1",
    "dcm2niix>=1.0.20241211",
    "itk>=5.4.0",
    "itk-elastix>=0.21.0",
    "lightgbm>=4.5.0",
    "mlflow>=2.17.2",
    "nnunetv2<2.5",
    "numpy<2.0.0",
    "pandas>=2.0.3",
    "pydicom>=2.4.4",
    "pyradiomics",
    "scikit-learn==1.2.2",
    "torch<=2.5",
]

[tool.uv.sources]
pyradiomics = { git = "https://github.com/AIM-Harvard/pyradiomics" }
